--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "14 - ReactJS<br>\r 14.8 - PROJEKT: Wyszukiwarka gifów<br>\r Zadanie: Działająca wyszukiwarka gifów",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
